cabal-version: 3.0

name: templatise
version: 0.1.0.0

license: Unlicense
license-file: LICENSE
copyright: (c) 2023 Alex Brandt
author: Alex Brandt
maintainer: alunduil@gmail.com

stability: alpha

homepage: https://github.com/alunduil/template.hs
bug-reports: https://github.com/alunduil/template.hs/issues

synopsis: You can use template.hs to create a new Haskell GitHub repository.
description:
  You can use template.hs to create a new GitHub repository. The repository will
  have Haskell, VS Code devcontainers, and various GitHub actions ready to use.
category: VSCode

tested-with:
  , GHC == 9.6.2
  , GHC == 9.6.1
  , GHC == 9.4.5
  , GHC == 9.4.4
  , GHC == 9.4.3
  , GHC == 9.4.2
  , GHC == 9.4.1
  , GHC == 9.2.8
  , GHC == 9.2.7
  , GHC == 9.2.6
  , GHC == 9.2.5
  , GHC == 9.2.4
  , GHC == 9.2.3
  , GHC == 9.2.2
  , GHC == 9.2.1
  , GHC == 9.0.2
  , GHC == 9.0.1
  , GHC == 8.10.7
  , GHC == 8.10.6
  , GHC == 8.10.5
  , GHC == 8.10.4
  , GHC == 8.10.3
  , GHC == 8.10.2
  , GHC == 8.10.1

extra-source-files:
  , CHANGELOG.md
  , README.md

source-repository head
  type: git
  location: https://github.com/alunduil/template.hs

executable initialise
  main-is: Main.hs
  build-depends:
    base ^>= {4.16.4.0, 4.18.0.0}
  -- other-modules:
  hs-source-dirs: initialise
  -- default-extensions:
  -- other-extensions:
  default-language: Haskell2010
  -- build-tool-depends:
  -- ghc-options:
