cabal-version:      3.0
name:               templatise
version:            0.1.0.0
license:            Unlicense
license-file:       LICENSE
copyright:          (c) 2023 Alex Brandt
author:             Alex Brandt
maintainer:         alunduil@gmail.com
stability:          alpha
homepage:           https://github.com/alunduil/template.hs
bug-reports:        https://github.com/alunduil/template.hs/issues
synopsis:
  You can use template.hs to create a new Haskell GitHub repository.

description:
  You can use template.hs to create a new GitHub repository. The repository will
  have Haskell, VS Code devcontainers, and various GitHub actions ready to use.

category:           VSCode
tested-with:        GHC ==9.2.8 || ==9.4.5 || ==9.6.2
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/alunduil/template.hs

executable initialise
  main-is:          Main.hs
  build-depends:
    , base                  ^>=4.16.4.0 || ^>=4.17.0.0 || ^>=4.18.0.0
    , bytestring            ^>=0.11.4.0 || ^>=0.12.0.2
    , Cabal                 ^>=3.10.1.0
    , extra                 ^>=1.7.14
    , filepath              ^>=1.4.2.2
    , http-client           ^>=0.7.13.1
    , http-conduit          ^>=2.3.8.3
    , network-uri           ^>=2.6.4.1  || ^>=2.7.0.0
    , optparse-applicative  ^>=0.18.1.0
    , process               ^>=1.6.16.0

  other-modules:
    Actions
    Configuration
    Git
    Licence

  hs-source-dirs:   initialise

  -- default-extensions:
  -- other-extensions:
  default-language: Haskell2010

  -- build-tool-depends:
  ghc-options:      -threaded
