cabal-version:      3.0
name:               templatise
version:            0.1.0.0
license:            Unlicense
license-file:       LICENSE
copyright:          (c) 2023 Alex Brandt
author:             Alex Brandt
maintainer:         alunduil@gmail.com
stability:          alpha
homepage:           https://github.com/alunduil/template.hs
bug-reports:        https://github.com/alunduil/template.hs/issues
synopsis:
  You can use template.hs to create a new Haskell GitHub repository.

description:
  You can use template.hs to create a new GitHub repository. The repository will
  have Haskell, VS Code devcontainers, and various GitHub actions ready to use.

category:           VSCode
tested-with:        GHC ==9.2.8 || ==9.4.5 || ==9.4.6 || ==9.4.7 || ==9.6.2
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/alunduil/template.hs

common initialise-common
  build-depends:
    , base                  ^>=4.16.4.0 || ^>=4.17.0.0 || ^>=4.18.0.0
    , bytestring            ^>=0.11.4.0 || ^>=0.12.0.2
    , Cabal-syntax          ^>=3.8.1.0  || ^>=3.10.1.0
    , filepath              ^>=1.4.2.2
    , mtl                   ^>=2.2.2    || ^>=2.3.1
    , network-uri           ^>=2.6.4.1  || ^>=2.7.0.0
    , optparse-applicative  ^>=0.18.1.0
    , text                  ^>=1.2.5.0  || ^>=2.0.2

library initialise-library
  import:           initialise-common
  exposed-modules:
    Cabal
    Configuration
    Defaults
    File
    Git
    Initialise

  -- TODO Make Git private.
  --other-modules: Git
  build-depends:
    , exceptions  ^>=0.10.4
    , extra       ^>=1.7.14
    , parsec      ^>=3.1.15.0
    , process     ^>=1.6.16.0
    , time        ^>=1.11.1.1 || ^>=1.12.2

  hs-source-dirs:   lib/initialise

  --default-extensions:
  --other-extensions:
  default-language: Haskell2010

  --build-tool-depends:
  ghc-options:      -Wall

test-suite initialise-test
  import:           initialise-common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , hspec               ^>=2.11.4
    , initialise-library
    , tasty               ^>=1.4.3
    , tasty-golden        ^>=2.3.5
    , tasty-hspec         ^>=1.2.0.4

  other-modules:
    CabalGolden
    ConfigurationSpec
    DefaultsSpec
    FileGolden
    GitSpec

  hs-source-dirs:   test/initialise

  --default-extensions:
  -- other-extensions:
  default-language: Haskell2010

  -- build-tool-depends:
  ghc-options:      -threaded -Wall

executable initialise
  main-is:          Main.hs
  build-depends:
    , base                ^>=4.16.4.0 || ^>=4.17.0.0 || ^>=4.18.0.0
    , initialise-library

  --other-modules:
  --  Cabal
  --  Configuration
  --  File
  --  Initialise
  --  Licence
  --  Replace

  hs-source-dirs:   bin/initialise

  -- default-extensions:
  -- other-extensions:
  default-language: Haskell2010

  -- build-tool-depends:
  ghc-options:      -threaded -Wall
