cabal-version:      3.0
name:               sentinel
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          (c) 1970 Sentinel
author:             Sentinel
maintainer:         sentinel@example.com
stability:          alpha
homepage:           https://github.com/sentinel/sentinel.git
bug-reports:        https://github.com/sentinel/sentinel.git/issues
synopsis:           TODO
description:        TODO
category:           VSCode
tested-with:        GHC ==9.2.8 || ==9.4.5 || ==9.6.2
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/sentinel/sentinel.git

common sentinel-common
    build-depends:
        , base                  ^>=4.16.4.0 || ^>=4.17.0.0 || ^>=4.18.0.0
        , bytestring            ^>=0.11.4.0 || ^>=0.12.0.2
        , Cabal-syntax          ^>=3.10.1.0
        , filepath              ^>=1.4.2.2
        , mtl                   ^>=2.2.2    || ^>=2.3.1
        , network-uri           ^>=2.6.4.1  || ^>=2.7.0.0
        , optparse-applicative  ^>=0.18.1.0
        , text                  ^>=2.0.2

library sentinel-library
    import:           sentinel-common
    exposed-modules:
    build-depends:
        , exceptions  ^>=0.10.5
        , extra       ^>=1.7.14
        , parsec      ^>=3.1.16.1
        , process     ^>=1.6.16.0
        , time        ^>=1.11.1.1 || ^>=1.12.2

    hs-source-dirs:   lib/sentinel
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite sentinel-test
    import:           sentinel-common
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        , hspec               ^>=2.11.4
        , sentinel-library
        , tasty               ^>=1.4.3
        , tasty-golden        ^>=2.3.5
        , tasty-hspec         ^>=1.2.0.4

    other-modules:
    hs-source-dirs:   test/sentinel
    default-language: Haskell2010
    ghc-options:      -threaded -Wall

executable sentinel
    main-is:          Main.hs
    build-depends:
        , base                ^>=4.16.4.0 || ^>=4.17.0.0 || ^>=4.18.0.0
        , http-client         ^>=0.7.13.1
        , http-conduit        ^>=2.3.8.3
        , sentinel-library

    hs-source-dirs:   bin/sentinel
    default-language: Haskell2010
    ghc-options:      -threaded -Wall
